--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,3 +1,5 @@
+# yaml-language-server: $schema=https://raw.githubusercontent.com/SchemaStore/schemastore/master/src/schemas/json/github-workflow.json
+---
 on: 
 - push
 - pull_request
@@ -11,9 +13,14 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-    
+
+    # Install some dependencies for testing
+    - name: Install xmllint
+      run: sudo apt-get install -y coturn
+
     # Setup Go
     - name: Setup Go
       uses: actions/setup-go@v2
