--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,15 +25,18 @@ jobs:
     - name: Setup Go
       uses: actions/setup-go@v2
       with:
-        go-version: '1.16.6'
+        go-version: 1.17
     
     # Install all the dependencies
     - name: Install dependencies
-      run: go get -u golang.org/x/lint/golint
-        
+      run: go get -u golang.org/x/lint/golint      
+
     # Run build of the application
-    - name: Run build
-      run: make
+    - name: Run wice build
+      run: go build ./cmd/wice
+
+    - name: Run wicectl build
+      run: go build ./cmd/wicectl
       
     # Run vet on the code
     - name: Run vet
@@ -54,30 +57,3 @@ jobs:
         reporter: github-pr-review
         filter_mode: nofilter
         fail_on_error: true
-
-  # The "deploy" workflow
-  deploy:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-    needs: [build] # Only run this workflow when "build" workflow succeeds
-    if: ${{ github.ref == 'refs/heads/master' && github.event_name == 'push' }} # Only run this workflow if it is master branch on push event
-    steps:
-
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
-    - name: Login to DockerHub
-      uses: docker/login-action@v1 
-      with:
-        username: ${{ secrets.DOCKER_USER }}
-        password: ${{ secrets.DOCKER_TOKEN }}
-    
-    - name: Build and push
-      id: docker_build
-      uses: docker/build-push-action@v2
-      with:
-        push: true
-        tags: user/app:latest
