--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,53 +1,46 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/SchemaStore/schemastore/master/src/schemas/json/github-workflow.json
 ---
+name: build
+
 on: 
-- push
-- pull_request
+  push:
+  pull_request:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # The "build" workflow
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
-    # Install some dependencies for testing
-    - name: Install xmllint
-      run: sudo apt-get install -y coturn
+    - name: Install dependencies
+      run: sudo apt-get install -y coturn protobuf-compiler
 
-    # Setup Go
     - name: Setup Go
       uses: actions/setup-go@v2
       with:
         go-version: 1.17
     
-    # Install all the dependencies
     - name: Install dependencies
-      run: go install golang.org/x/lint/golint@latest
+      run: |
+        go install golang.org/x/lint/golint@latest
+        go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
+        go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
 
-    # Run build of the application
     - name: Run wice build
       run: go build ./cmd/wice
       
-    # Run vet on the code
     - name: Run vet
       run: go vet ./...
 
-    # Run lint on the code
     - name: Run lint
       run: golint ./...
 
-    # Run testing on the code
     - name: Run testing
-      run: go test -v ./...
+      run: |
+        sudo --preserve-env \
+          env "PATH=$PATH" \
+          go test -v ./...
 
-    # Run static check
     - uses: reviewdog/action-staticcheck@v1
       with:
         github_token: ${{ secrets.github_token }}
