--- a/contrib/crd.yaml
+++ b/contrib/crd.yaml
@@ -31,9 +31,9 @@ spec:
                   type: string
                   description: Base64-encoded encrypted message body
                   pattern: '^[A-Za-z0-9+/]+={0,2}$'
-            receipient:
+            recipient:
               type: string
-              description: Base64-encoded public key of the receipient
+              description: Base64-encoded public key of the recipient
               pattern: '^[A-Za-z0-9+/]+={0,2}$'
             sender:
               type: string
