--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install dependencies
-      run: sudo apt-get install -y coturn protobuf-compiler
+      run: sudo apt-get install -y coturn protobuf-compiler make
 
     - name: Setup Go
       uses: actions/setup-go@v2
@@ -25,6 +25,7 @@ jobs:
         go install golang.org/x/lint/golint@latest
         go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
         go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+        go install github.com/onsi/ginkgo/v2/ginkgo@latest
 
     - name: Run wice build
       run: go build ./cmd/wice
@@ -39,7 +40,7 @@ jobs:
       run: |
         sudo --preserve-env \
           env "PATH=$PATH" \
-          go test -coverprofile coverage.out -v ./...
+          make tests
 
     - uses: reviewdog/action-staticcheck@v1
       with:
@@ -54,5 +55,5 @@ jobs:
         CODACY_REPORTER_TMP_FOLDER: .codacy
       with:
         project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
-        coverage-reports: coverage.out
+        coverage-reports: coverprofile.out
         force-coverage-parser: go
