ci: disable copylocks check
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,7 +31,7 @@ jobs:
       run: go build ./cmd/wice
       
     - name: Run vet
-      run: go vet ./...
+      run: go vet --copylocks=false ./...
 
     - name: Run lint
       run: golint ./...
