--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,12 +20,13 @@ jobs:
       with:
         go-version: 1.18
     
-    - name: Install dependencies
+    - name: Install build and test dependencies
       run: |
         go install golang.org/x/lint/golint@latest
         go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
         go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
         go install github.com/onsi/ginkgo/v2/ginkgo@latest
+        go install sigs.k8s.io/controller-runtime/tools/setup-envtest@latest
 
     - name: Run wice build
       run: go build ./cmd/wice
