--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -37,16 +37,14 @@ jobs:
       with:
         go-version: 1.17
 
-    - name: Install dependencies
+    - name: Install build dependencies
       run: |
-        go install golang.org/x/lint/golint@latest
         go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
         go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
 
     - name: Run GoReleaser
       uses: goreleaser/goreleaser-action@v2
       with:
-        # either 'goreleaser' (default) or 'goreleaser-pro'
         distribution: goreleaser
         version: latest
         args: release --rm-dist
