run less jobs in PR pipelines
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/.github/workflows/analysis.yaml
+++ b/.github/workflows/analysis.yaml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/SchemaStore/schemastore/master/src/schemas/json/github-workflow.json
 ---
-name: Codacy Security Scan
+name: Analysis
 
 on:
   push:
