--- a/etc/wice.yaml
+++ b/etc/wice.yaml
@@ -7,7 +7,7 @@ backends:
 - k8s:///path/to/your/kubeconfig.yaml?namespace=default
 
 # Wireguard settings
-wg:
+wireguard:
   # Use wg / wg-quick configuration files
   config:
       path: /etc/wireguard
@@ -38,67 +38,71 @@ socket:
   # Mostly useful for testing automation
   wait: false
 
-# Interactive Connectivity Establishment
-ice:
-  # A list of STUN and TURN servers used by ICE
-  urls:
-  - stun:l.google.com:19302
+route_sync:
+  enabled: true
 
-  # Credentils for STUN/TURN servers configured above
-  username: ""
-  password: ""
+  table: main
 
-  # Allow connections to STUNS/TURNS servers for which
-  # we cant validate their TLS certificates
-  insecure_skip_verify: false
+config_sync:
+  enabled: true
 
-  # Limit available network and candidate types
-  network-types: [udp4, udp6, tcp4, tcp6]
-  candidate_types: [host, srflx, prflx ,relay]
+  watch: true
 
-  # Regular expression whitelist of interfaces which are used to gather ICE candidates.
-  interface_filter: .*
+# Endpoint Discovery
+endpoint_disc:
+  enabled: true
 
-  # Lite agents do not perform connectivity check and only provide host candidates.
-  lite: false
+  # Interactive Connectivity Establishment
+  ice:
+    # A list of STUN and TURN servers used by ICE
+    urls:
+    - stun:l.google.com:19302
 
-  # Attempt to find candidates via mDNS discovery
-  mdns: false
+    # Credentils for STUN/TURN servers configured above
+    username: ""
+    password: ""
 
-  # Sets the max amount of binding requests the agent will send over a candidate pair for validation or nomination.
-  # If after the the configured number, the candidate is yet to answer a binding request or a nomination we set the pair as failed.
-  max_binding_requests: 7
+    # Allow connections to STUNS/TURNS servers for which
+    # we cant validate their TLS certificates
+    insecure_skip_verify: false
 
-  # SetNAT1To1IPs sets a list of external IP addresses of 1:1 (D)NAT and a candidate type for which the external IP address is used.
-  # This is useful when you are host a server using Pion on an AWS EC2 instance which has a private address, behind a 1:1 DNAT with a public IP (e.g. Elastic IP).
-  # In this case, you can give the public IP address so that Pion will use the public IP address in its candidate instead of the private IP address.
-  nat_1to1_ips: []
+    # Limit available network and candidate types
+    network-types: [udp4, udp6, tcp4, tcp6]
+    candidate_types: [host, srflx, prflx ,relay]
 
-  # Limit the port range used by ICE
-  port:
-      min: 49152
-      max: 65535
+    # Regular expression whitelist of interfaces which are used to gather ICE candidates.
+    interface_filter: .*
 
-  # The check interval controls how often our task loop runs when in the connecting state.
-  check_interval: 200ms
-  
-  # If the duration is 0, the ICE Agent will never go to disconnected
-  disconnected_timeout: 5s
+    # Lite agents do not perform connectivity check and only provide host candidates.
+    lite: false
 
-  # If the duration is 0, we will never go to failed.
-  failed_timeout: 5s
-  restart_timeout: 5s
+    # Attempt to find candidates via mDNS discovery
+    mdns: false
 
-  # Determines how often should we send ICE keepalives (should be less then connection timeout above).
-  # A keepalive interval of 0 means we never send keepalive packets
-  keepalive_interval: 2s
+    # Sets the max amount of binding requests the agent will send over a candidate pair for validation or nomination.
+    # If after the the configured number, the candidate is yet to answer a binding request or a nomination we set the pair as failed.
+    max_binding_requests: 7
 
-# Settings for forwarding / proxying encapsulated Wireguard traffic between
-# pion/ice and the Kernel Wireguard interfaces
-proxy:
-  # Use NFtables to setup a port redirect / NAT for server reflexive candidates
-  nft: true
+    # SetNAT1To1IPs sets a list of external IP addresses of 1:1 (D)NAT and a candidate type for which the external IP address is used.
+    # This is useful when you are host a server using Pion on an AWS EC2 instance which has a private address, behind a 1:1 DNAT with a public IP (e.g. Elastic IP).
+    # In this case, you can give the public IP address so that Pion will use the public IP address in its candidate instead of the private IP address.
+    nat_1to1_ips: []
 
-  # Use a RAW socket with an attached eBPF socket filter to receive STUN packets while
-  # all other data is directly received by the ListenPort of a kernel-space Wireguard interface.
-  ebpf: true
+    # Limit the port range used by ICE
+    port:
+        min: 49152
+        max: 65535
+
+    # The check interval controls how often our task loop runs when in the connecting state.
+    check_interval: 200ms
+    
+    # If the duration is 0, the ICE Agent will never go to disconnected
+    disconnected_timeout: 5s
+
+    # If the duration is 0, we will never go to failed.
+    failed_timeout: 5s
+    restart_timeout: 5s
+
+    # Determines how often should we send ICE keepalives (should be less then connection timeout above).
+    # A keepalive interval of 0 means we never send keepalive packets
+    keepalive_interval: 2s
