refactor cmd directory structure
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,7 +33,7 @@ jobs:
         go install honnef.co/go/tools/cmd/staticcheck@latest
 
     - name: Run wice build
-      run: go build ./cmd/wice
+      run: go build -o wice ./cmd
       
     - name: Run vet
       run: go vet --copylocks=false ./...
