fix naming of WireGuard and wice
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/etc/systemd/wice.service
+++ b/etc/systemd/wice.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Wireguard Interactive Connectivity Establishment
+Description=WireGuard Interactive Connectivity Establishment
 
 Wants=network-online.target
 After=network-online.target
