ci: fix Docker manifest generation
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -157,12 +157,12 @@ dockers:
   - --label=org.opencontainers.image.licenses=Apache-2.0
 
 docker_manifests:
-- name_template: stv0g/{{ .ProjectName }}:{{ .Version }}
+- name_template: "ghcr.io/stv0g/{{ .ProjectName }}:{{ .Version }}"
   image_templates:
-  - ghcr.io/stv0g/{{ .ProjectName }}:{{ .Version }}-amd64
-  - ghcr.io/stv0g/{{ .ProjectName }}:{{ .Version }}-armv6
-  - ghcr.io/stv0g/{{ .ProjectName }}:{{ .Version }}-armv7
-  - ghcr.io/stv0g/{{ .ProjectName }}:{{ .Version }}-arm64v8
+  - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}-amd64"
+  - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}-armv6"
+  - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}-armv7"
+  - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}-arm64v8"
 
 snapshot:
   name_template: "{{ incpatch .Version }}-next"
