--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -37,7 +37,9 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.18
+        go-version-file: 'go.mod'
+        check-latest: true
+        cache: true
 
     - name: Install build dependencies
       run: |
