--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,70 +12,98 @@ on:
 
 jobs:
   build:
-    name: Build for ${{ matrix.os }} on ${{ matrix.arch }}${{ matrix.arch == 'arm' && format('-v{0}', matrix.arm) || ''}}
+    name: Build for ${{ matrix.target_os }} on ${{ matrix.target_arch }}${{ matrix.target_arch == 'arm' && format('-v{0}', matrix.arm) || ''}}
     runs-on: ${{ matrix.runner || 'ubuntu-latest' }}
 
     strategy:
       fail-fast: false
       matrix:
         include:
-        - os: linux
-          arch: amd64
+        - target_os: linux
+          target_arch: amd64
+          host_os: linux
+          host_arch: amd64
           runner: ubuntu-latest
 
-        - os: linux
-          arch: arm64
+        - target_os: linux
+          target_arch: arm64
+          host_os: linux
+          host_arch: amd64
           runner: ubuntu-latest
 
-        - os: linux
-          arch: arm
-          arm: 6
-          runner: ubuntu-latest
-
-        - os: linux
-          arch: arm
+        - target_os: linux
+          target_arch: arm
+          host_os: linux
+          host_arch: amd64
           arm: 7
           runner: ubuntu-latest
 
-        - os: darwin
-          arch: arm64
+        - target_os: freebsd
+          target_arch: amd64
+          host_os: linux
+          host_arch: amd64
+          runner: ubuntu-latest
+
+        - target_os: freebsd
+          target_arch: arm64
+          host_os: linux
+          host_arch: amd64
+          runner: ubuntu-latest
+
+        - target_os: freebsd
+          target_arch: arm
+          host_os: linux
+          host_arch: amd64
+          arm: 7
+          runner: ubuntu-latest
+
+        - target_os: darwin
+          target_arch: arm64
+          host_os: dawrin
+          host_arch: amd64
           runner: macos-latest
 
-        - os: darwin
-          arch: amd64
+        - target_os: darwin
+          target_arch: amd64
+          host_os: darwin
+          host_arch: amd64
           runner: macos-latest
 
-        - os: windows
-          arch: arm64
+        - target_os: windows
+          target_arch: arm64
+          host_os: windows
+          host_arch: amd64
           runner: windows-latest
 
-        - os: windows
-          arch: amd64
+        - target_os: windows
+          target_arch: amd64
+          host_os: windows
+          host_arch: amd64
           runner: windows-latest
 
     env:
-      GOOS: ${{ matrix.os }}
-      GOARCH: ${{ matrix.arch }}
+      GOOS: ${{ matrix.target_os }}
+      GOARCH: ${{ matrix.target_arch }}
       GOARM: ${{ matrix.arm || '' }}
 
     steps:
     - uses: actions/checkout@v2
 
     - name: Install dependencies
-      if: ${{ matrix.os == 'linux' }}
+      if: ${{ matrix.target_os == 'linux' }}
       run: sudo apt-get install -y
               coturn
               protobuf-compiler
               make
 
     - name: Install dependencies
-      if: ${{ matrix.os == 'darwin' }}
+      if: ${{ matrix.target_os == 'darwin' }}
       run: brew install
             protobuf
             make
 
     - name: Install dependencies
-      if: ${{ matrix.os == 'windows' }}
+      if: ${{ matrix.target_os == 'windows' }}
       run: choco install
             protoc
             make
@@ -88,9 +116,9 @@ jobs:
         cache: true
     
     - name: Install build and test dependencies
-      if: ${{ matrix.arch == 'amd64' || matrix.os == 'linux' }}
       env:
-        GOARCH: amd64
+        GOOS: ${{ matrix.host_os }}
+        GOARCH: ${{ matrix.host_arch }}
       run: |
         go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
         go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
@@ -102,26 +130,26 @@ jobs:
       run: go build -o wice ./cmd
       
     - name: Run vet
-      if: ${{ matrix.os == 'linux' }}
+      if: ${{ matrix.target_os == 'linux' }}
       run: go vet --copylocks=false ./...
 
     - name: Run staticcheck
-      if: ${{ matrix.os == 'linux' }}
+      if: ${{ matrix.target_os == 'linux' }}
       run: staticcheck ./...
 
     - name: Run root-less tests
-      if: ${{ matrix.arch == 'amd64' }}
-      run: make tests GINKGO_EXTRA_OPTS="--skip-package=./test/cases,./pkg/device"
+      if: ${{ matrix.target_arch == 'amd64' }}
+      run: make tests
 
     # - name: Run tests requiring root access
-    #   if: ${{ matrix.os == 'linux' && matrix.arch == 'amd64' }}
+    #   if: ${{ matrix.target_os == 'linux' && matrix.target_arch == 'amd64' }}
     #   run: |
     #     sudo --preserve-env \
     #       env "PATH=$PATH" \
     #       make tests
 
     - name: Report test coverage to Codacy
-      if: ${{ matrix.os == 'linux' && matrix.arch == 'amd64' }}
+      if: ${{ matrix.target_os == 'linux' && matrix.target_arch == 'amd64' }}
       uses: codacy/codacy-coverage-reporter-action@v1
       env:
         CODACY_REPORTER_TMP_FOLDER: .codacy
@@ -131,7 +159,7 @@ jobs:
         force-coverage-parser: go
 
     - name: Report test coverage to Codecov
-      if: ${{ matrix.os == 'linux' && matrix.arch == 'amd64' }}
+      if: ${{ matrix.target_os == 'linux' && matrix.target_arch == 'amd64' }}
       uses: codecov/codecov-action@v3
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
