--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -28,6 +28,7 @@ builds:
   goos:
   - linux
   - darwin
+  - freebsd
   - windows
 
   goarch:
@@ -36,8 +37,11 @@ builds:
   - arm
   
   goarm:
-  - "6"
   - "7"
+
+  ignore:
+  - goos: windows
+    goarch: arm
 
 archives:
 - builds:
@@ -121,27 +125,6 @@ dockers:
   dockerfile: Dockerfile.scratch
   goos: linux
   goarch: arm
-  goarm: "6"
-  image_templates:
-  - "ghcr.io/stv0g/{{ .ProjectName }}:latest-armv6"
-  - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Major }}-armv6"
-  - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Major }}.{{ .Minor }}-armv6"
-  - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Major }}.{{ .Minor }}.{{ .Patch }}-armv6"
-  build_flag_templates:
-  - --platform=linux/arm/v6
-  - --label=org.opencontainers.image.title={{ .ProjectName }}
-  - --label=org.opencontainers.image.description={{ .ProjectName }}
-  - --label=org.opencontainers.image.url=https://github.com/stv0g/{{ .ProjectName }}
-  - --label=org.opencontainers.image.source=https://github.com/stv0g/{{ .ProjectName }}
-  - --label=org.opencontainers.image.version={{ .Version }}
-  - --label=org.opencontainers.image.created={{ time "2006-01-02T15:04:05Z07:00" }}
-  - --label=org.opencontainers.image.revision={{ .FullCommit }}
-  - --label=org.opencontainers.image.licenses=Apache-2.0
-
-- use: buildx
-  dockerfile: Dockerfile.scratch
-  goos: linux
-  goarch: arm
   goarm: "7"
   image_templates:
   - "ghcr.io/stv0g/{{ .ProjectName }}:latest-armv7"
@@ -163,13 +146,11 @@ docker_manifests:
 - name_template: "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}"
   image_templates:
   - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}-amd64"
-  - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}-armv6"
   - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}-armv7"
   - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}-arm64v8"
 - name_template: "ghcr.io/stv0g/{{ .ProjectName }}:latest"
   image_templates:
   - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}-amd64"
-  - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}-armv6"
   - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}-armv7"
   - "ghcr.io/stv0g/{{ .ProjectName }}:v{{ .Version }}-arm64v8"
 
