--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -86,6 +86,8 @@ jobs:
       GOARCH: ${{ matrix.target_arch }}
       GOARM: ${{ matrix.arm || '' }}
 
+      CGO_ENABLED: "0"
+
     steps:
     - uses: actions/checkout@v2
 
@@ -135,16 +137,27 @@ jobs:
     - name: Run staticcheck
       run: staticcheck ./...
 
-    - name: Run root-less tests
+    - name: Run tests
       if: ${{ matrix.target_arch == matrix.host_arch && matrix.target_os == matrix.host_os }}
+      env:
+        GINKGO_PKG: ./pkg/...
       run: make tests
 
-    # - name: Run tests requiring root access
-    #   if: ${{ matrix.target_os == 'linux' && matrix.target_arch == 'amd64' }}
-    #   run: |
-    #     sudo --preserve-env \
-    #       env "PATH=$PATH" \
-    #       make tests
+    - name: Run tests requiring root privileges
+      if: ${{ matrix.target_arch == matrix.host_arch && matrix.target_os == matrix.host_os && matrix.host_os != 'windows' }}
+      env:
+        GINKGO_PKG: ./test
+      run: |
+        sudo --preserve-env \
+          env "PATH=$PATH" \
+          make tests
+
+    - name: Upload logs an packet captures as artifacts
+      uses: actions/upload-artifact@v3
+      if: always()
+      with:
+        name: test-logs-${{ matrix.target_os }}-${{ matrix.target_arch }}
+        path: test/logs/
 
     - name: Report test coverage to Codacy
       if: ${{ matrix.target_os == 'linux' && matrix.target_arch == 'amd64' }}
