ci: disable builds on 32-bit arm due to Go compiler bug
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,12 +31,13 @@ jobs:
           host_arch: amd64
           runner: ubuntu-latest
 
-        - target_os: linux
-          target_arch: arm
-          host_os: linux
-          host_arch: amd64
-          arm: 7
-          runner: ubuntu-latest
+        # Temporarily disabled due: https://github.com/golang/go/issues/54638
+        # - target_os: linux
+        #   target_arch: arm
+        #   host_os: linux
+        #   host_arch: amd64
+        #   arm: 7
+        #   runner: ubuntu-latest
 
         - target_os: freebsd
           target_arch: amd64
@@ -50,12 +51,12 @@ jobs:
           host_arch: amd64
           runner: ubuntu-latest
 
-        - target_os: freebsd
-          target_arch: arm
-          host_os: linux
-          host_arch: amd64
-          arm: 7
-          runner: ubuntu-latest
+        # - target_os: freebsd
+        #   target_arch: arm
+        #   host_os: linux
+        #   host_arch: amd64
+        #   arm: 7
+        #   runner: ubuntu-latest
 
         - target_os: darwin
           target_arch: arm64
